--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
                 <a class="nav-link" href="#">INICIO</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="#">TIENDA</a>
+                <a class="nav-link" href="./tienda.html">TIENDA</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="#">CURSOS</a>
+                <a class="nav-link" href="./cursos.html">CURSOS</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="#">CONTACTO</a>
+                <a class="nav-link" href="...">CONTACTO</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="#">UBICACIÓN</a>
+                <a class="nav-link" href="...">UBICACIÓN</a>
               </li>
             </ul>
 
@@ -153,6 +153,7 @@
 
         </div>
 
+        
 
         <div>
           <ul class="footer-ul">
@@ -160,7 +161,7 @@
                 <a class="menu-footer" href="#">INICIO</a>
             </li>
             <li class="footer-li">
-                <a class="menu-footer" href="...">TIENDA</a>
+                <a class="menu-footer" href="./tienda.html">TIENDA</a>
             </li>
             <li class="footer-li">
                 <a class="menu-footer" href="...">CURSOS</a>
