--- a/contacto.html
+++ b/contacto.html
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="#">CONTACTO</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="...">UBICACIÓN</a>
+                <a class="nav-link" href="./ubicación.html">UBICACIÓN</a>
               </li>
             </ul>
 
@@ -168,7 +168,7 @@
               <a class="menu-footer" href="#">CONTACTO</a>
             </li>
             <li class="footer-li">
-              <a class="menu-footer" href="...">UBICACIÓN</a>
+              <a class="menu-footer" href="./ubicación.html">UBICACIÓN</a>
             </li>
            </ul>
 
