--- a/tienda.html
+++ b/tienda.html
@@ -52,13 +52,13 @@
                 <a class="nav-link" href="#">TIENDA</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="#">CURSOS</a>
+                <a class="nav-link" href="./cursos.html">CURSOS</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="#">CONTACTO</a>
+                <a class="nav-link" href="./contacto.html">CONTACTO</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="#">UBICACIÓN</a>
+                <a class="nav-link" href="./ubicación.html">UBICACIÓN</a>
               </li>
             </ul>
 
@@ -68,121 +68,100 @@
       </nav>
 
 
-      <div class="grid-container">
-        <div class="bienvenidos">
+      <div class="tienda-general">
+
+        <div class="tienda-bienvenidos">
           <h3>BIENVENIDOS A NUESTRA TIENDA</h3>
         </div>
 
-        <div class="grid-titulos amigurumis">
+        <div class="tienda-titulos">
           <h4>AMIGURUMIS</h4>
         </div>
 
-        <div class="ami1">
-          <img class="grid-img" src="./images/articulos-tienda/amigurumi-uno.jpg" alt="">
+        <div class="tienda-clases">
+
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/amigurumi-uno.jpg" alt="">
+            <h5>Baby Yoda</h5>
+          </div>
+
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/amigurumi-dos.jpg" alt="">
+            <h5>Oso grande</h5>
+          </div>
+
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/amigurumi-tres.jpg" alt="">
+            <h5>Oso pequeño</h5>
+          </div>
+
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/amigurumi-cuatro.jpg" alt="">
+            <h5>Gatito</h5>
+          </div>
+
         </div>
 
-        <div class="det1">
-          <h5>Baby Yoda</h5>
-        </div>
-
-        <div class="ami2">
-          <img class="grid-img" src="./images/articulos-tienda/amigurumi-dos.jpg" alt="">
-        </div>
-
-        <div class="det2">
-          <h5>Oso grande</h5>
-        </div>
-
-        <div class="ami3">
-          <img class="grid-img" src="./images/articulos-tienda/amigurumi-tres.jpg" alt="">
-        </div>
-
-        <div class="det3">
-          <h5>Oso pequeño</h5>
-        </div>
-
-        <div class="ami4">
-          <img class="grid-img" src="./images/articulos-tienda/amigurumi-cuatro.jpg" alt="">
-        </div>
-
-        <div class="det4">
-          <h5>Gatito</h5>
-        </div>
-
-        <div class="grid-titulos sweaters">
+        <div class="tienda-titulos">
           <h4>SWEATERS</h4>
         </div>
 
-        <div class="swe1">
-          <img class="grid-img" src="./images/articulos-tienda/sweater-uno.jpg" alt="">
+        <div class="tienda-clases">
+
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/sweater-uno.jpg" alt="">
+            <h5>Saco rojo</h5>
+          </div>
+
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/sweater-dos.jpg" alt="">
+            <h5>Sweater blanco</h5>
+          </div>
+
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/sweater-tres.jpg" alt="">
+            <h5>Sweater amarillo</h5>
+          </div>
+
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/sweater-cuatro.jpg" alt="">
+            <h5>Sweater blanco con brillos</h5>
+          </div>
+
         </div>
 
-        <div class="det5">
-          <h5>Saco rojo</h5>
-        </div>
-
-        <div class="swe2">
-          <img class="grid-img" src="./images/articulos-tienda/sweater-dos.jpg" alt="">
-        </div>
-
-        <div class="det6">
-          <h5>Sweater blanco</h5>
-        </div>
-
-        <div class="swe3">
-          <img class="grid-img" src="./images/articulos-tienda/sweater-tres.jpg" alt="">
-        </div>
-
-        <div class="det7">
-          <h5>Sweater amarillo</h5>
-        </div>
-
-        <div class="swe4">
-          <img class="grid-img" src="./images/articulos-tienda/sweater-cuatro.jpg" alt="">
-        </div>
-
-        <div class="det8">
-          <h5>Sweater blanco brilloso</h5>
-        </div>
-
-        <div class="grid-titulos accesorios">
+        <div class="tienda-titulos">
           <h4>ACCESORIOS</h4>
         </div>
 
-        <div class="acc1">
-          <img class="grid-img" src="./images/articulos-tienda/accesorio-uno.jpg" alt="">
-        </div>
+        <div class="tienda-clases">
 
-        <div class="det9">
-          <h5>Portabotellas</h5>
-        </div>
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/accesorio-uno.jpg" alt="">
+            <h5>Portabotella</h5>
+          </div>
 
-        <div class="acc2">
-          <img class="grid-img" src="./images/articulos-tienda/accesorio-dos.jpg" alt="">
-        </div>
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/accesorio-dos.jpg" alt="">
+            <h5>Funda para celular</h5>
+          </div>
 
-        <div class="det10">
-          <h5>Funda para celular</h5>
-        </div>
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/accesorio-tres.jpg" alt="">
+            <h5>Accesorio de estrella</h5>
+          </div>
 
-        <div class="acc3">
-          <img class="grid-img" src="./images/articulos-tienda/accesorio-tres.jpg" alt="">
-        </div>
+          <div class="tienda-productos">
+            <img src="./images/articulos-tienda/accesorio-cuatro.JPG" alt="">
+            <h5>Llavero lechuza</h5>
+          </div>
 
-        <div class="det11">
-          <h5>Accesorio de estella</h5>
-        </div>
-
-        <div class="acc4">
-          <img class="grid-img" src="./images/articulos-tienda/accesorio-cuatro.JPG" alt="">
-        </div>
-
-        <div class="det12">
-          <h5>Llavero lechuza </h5>
         </div>
 
       </div>
       
+      
+
 
 
 
@@ -220,13 +199,13 @@
                 <a class="menu-footer" href="#">TIENDA</a>
             </li>
             <li class="footer-li">
-                <a class="menu-footer" href="...">CURSOS</a>
+                <a class="menu-footer" href="./cursos.html">CURSOS</a>
             </li>
             <li class="footer-li">
-              <a class="menu-footer" href="...">CONTACTO</a>
+              <a class="menu-footer" href="./contacto.html">CONTACTO</a>
             </li>
             <li class="footer-li">
-              <a class="menu-footer" href="...">UBICACIÓN</a>
+              <a class="menu-footer" href="./ubicación.html">UBICACIÓN</a>
             </li>
            </ul>
 
