--- a/cursos.html
+++ b/cursos.html
@@ -49,16 +49,16 @@
                 <a class="nav-link" href="./index.html">INICIO</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="#">TIENDA</a>
+                <a class="nav-link" href="./tienda.html">TIENDA</a>
               </li>
               <li class="nav-item item-space">
                 <a class="nav-link" href="#">CURSOS</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="#">CONTACTO</a>
+                <a class="nav-link" href="./contacto.html">CONTACTO</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="#">UBICACIÓN</a>
+                <a class="nav-link" href="./ubicación.html">UBICACIÓN</a>
               </li>
             </ul>
 
@@ -138,16 +138,16 @@
                 <a class="menu-footer" href="./index.html">INICIO</a>
             </li>
             <li class="footer-li">
-                <a class="menu-footer" href="#">TIENDA</a>
+                <a class="menu-footer" href="./tienda.html">TIENDA</a>
             </li>
             <li class="footer-li">
-                <a class="menu-footer" href="...">CURSOS</a>
+                <a class="menu-footer" href="#">CURSOS</a>
             </li>
             <li class="footer-li">
-              <a class="menu-footer" href="...">CONTACTO</a>
+              <a class="menu-footer" href="./contacto.html">CONTACTO</a>
             </li>
             <li class="footer-li">
-              <a class="menu-footer" href="...">UBICACIÓN</a>
+              <a class="menu-footer" href="./ubicación.html">UBICACIÓN</a>
             </li>
            </ul>
 
