Links y redes sociales

--- a/cursos.html
+++ b/cursos.html
@@ -33,10 +33,10 @@
   <body>
 
     <!--NavBar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid nav-style">
 
-          <a class="navbar-brand" href="./index.html"><img class="logo" src="./logo.png" alt=""></a>
+          <a class="navbar-brand" href="./index.html"><img class="logo" src="./logo.png" alt="Logo de Entrelazadas Mágicas"></a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -68,66 +68,44 @@
       </nav>
 
 
-      <div>
-        <img src="./images/portadas/portada-cursos.png" alt="" class="portada-cursos">
-      </div>
+      <main>
 
-      <div class="grid-container">
-        <div class="cursos">
-          <h3>NUESTROS CURSOS Y TUTORIALES</h3>
+        <div>
+          <img src="./images/portadas/portada-cursos.png" alt="Portada cursos, persona tejiendo" class="portada-cursos">
+        </div>
+  
+        <div class="grid-container">
+
+          <div class="cursos">
+            <h3>NUESTROS CURSOS Y TUTORIALES</h3>
+          </div>
+  
+          <div class="curso-uno">
+            <a href="https://www.youtube.com/" target="_blank"><img src="./images/cursos/curso-uno.jpg" alt="Imagen de curso para hacer un llavero de lechuza" class="curso-img"></a>
+          </div>
+  
+          <div class="curso-dos">
+            <a href="https://www.youtube.com/" target="_blank"><img src="./images/cursos/curso-dos.jpg" alt="Imagen de curso para hacer un amigurumi de Baby Yoda" class="curso-img"></a>
+          </div>
+  
+          <div class="detalles-uno">
+            <h5 class="detalles-style">LLAVERO DE LECHUZA</h5>
+          </div>
+  
+          <div class="detalles-dos">
+            <h5 class="detalles-style">AMIGURUMI DE BABY YODA</h5>
+          </div>
+
         </div>
 
-        <div class="curso-uno">
-          <a href=""><img src="./images/cursos/curso-uno.jpg" alt="" class="curso-img"></a>
-        </div>
-
-        <div class="curso-dos">
-          <a href=""><img src="./images/cursos/curso-dos.jpg" alt="" class="curso-img"></a>
-        </div>
-
-        <div class="detalles-uno">
-          <h5 class="detalles-style">LLAVERO DE LECHUZA</h5>
-
-        </div>
-
-        <div class="detalles-dos">
-          <h5 class="detalles-style">AMIGURUMI DE BABY YODA</h5>
-
-        </div>
-      </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+      </main>
 
 
       <!--Footer-->
       <footer class="container-footer">
 
         <div>
-          <a href="..."><img class="logo-footer" src="logo.png" alt=""></a>
+          <a href="./index.html"><img class="logo-footer" src="logo.png" alt="Logo de Entrelazadas Mágicas"></a>
 
         </div>
 
@@ -155,39 +133,17 @@
 
 
         <div>
-
           <h6>NUESTRAS REDES SOCIALES</h6>
           <div class="iconos-footer">
-            <i class="fa-brands fa-instagram icon-style"></i>
-            <i class="fa-brands fa-facebook icon-style"></i>
-            <i class="fa-brands fa-pinterest icon-style"></i>
-            <i class="fa-brands fa-youtube icon-style"></i>
+            <a href="https://www.instagram.com/entrelazadasmagicas/" target="_blank"><i class="fa-brands fa-instagram icon-style"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook icon-style"></i></a>
+            <a href="https://ar.pinterest.com/" target="_blank"><i class="fa-brands fa-pinterest icon-style"></i></a>
+            <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube icon-style"></i></a>
           </div>
+        </div>
         </div>
 
       </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
