--- a/cursos.html
+++ b/cursos.html
@@ -71,7 +71,7 @@
       <main>
 
         <div>
-          <img src="./images/portadas/portada-cursos.png" alt="Portada cursos, persona tejiendo" class="portada-cursos">
+          <img src="./images/portadas/portada-cursos.png" alt="Portada cursos, persona tejiendo" class="cursos-portada">
         </div>
   
         <div class="grid-container">
