--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@
   
        <div class="pagina-inicio">
          <div class="productos">
-          <div>
+          <div class="inicio-img">
               <a href="./tienda.html#id-amigurumis"><img src="./images/amigurumi.png" alt="Imagen de un amigurumi" class="tipos"></a>
               <a href="./tienda.html#id-amigurumis" class="links">AMIGURUMIS</a>
           </div>
-          <div>
+          <div class="inicio-img">
               <a href="./tienda.html#id-sweaters"><img src="./images/sweater.png" alt="Imagen de un sweater" class="tipos"></a>
               <a href="./tienda.html#id-sweaters" class="links">SWEATERS</a>
           </div>
-          <div>
+          <div class="inicio-img">
               <a href="./tienda.html#id-accesorios"><img src="./images/accesorios.png" alt="Imagen de un sweater para gatos" class="tipos"></a>
               <a href="./tienda.html#id-accesorios" class="links">ACCESORIOS</a>
           </div>
-          <div>
+          <div class="inicio-img">
               <a href="./cursos.html"><img src="./images/cursos.png" alt="Imagen de una persona haciendo un curso" class="tipos"></a>
               <a href="./cursos.html" class="links">CURSOS</a>
           </div>
