--- a/ubicación.html
+++ b/ubicación.html
@@ -70,7 +70,7 @@
 
       <main>
 
-        <div class="general-ubicacion">
+        <div class="ubicacion-general">
           <div>
             <h3 class="ubicacion">NUESTRA UBICACIÓN</h3>
           </div>
@@ -79,13 +79,13 @@
             <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6575.548739842574!2d-58.52316900000001!3d-34.508604!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb0ee292497e9%3A0xf9a611e58747f528!2sUnicenter!5e0!3m2!1ses!2sar!4v1715728305343!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
   
-          <div class="elementos-ubicacion">
-            <i class="fa-solid fa-bag-shopping iconos-ubicacion"></i>
+          <div class="ubicacion-elementos">
+            <i class="fa-solid fa-bag-shopping ubicacion-iconos"></i>
             <h5>Nos encontramos en Unicenter Shopping (Piso 0, Nivel 0, Local 0000).</h5>
           </div>
   
-          <div class="elementos-ubicacion">
-            <i class="fa-solid fa-map-location-dot iconos-ubicacion"></i>
+          <div class="ubicacion-elementos">
+            <i class="fa-solid fa-map-location-dot ubicacion-iconos"></i>
             <h5>Paraná 3745, Martínez, Provincia de Buenos Aires.</h5>
           </div>
         </div>
