--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid nav-style">
 
-          <a class="navbar-brand" href="#"><img class="logo" src="./logo.png" alt="Logo de Entrelazadas Mágicas"></a>
+          <a class="navbar-brand" href="#"><img class="logo" src="./images/logo.png" alt="Logo de Entrelazadas Mágicas"></a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -75,10 +75,10 @@
         <div id="carouselExample" class="carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./images/portada-inicio.jpg" class="d-block w-100" alt="Portada inicio 1, productos de Entrelazadas Mágicas">
+              <img src="./images/portadas/portada-inicio.jpg" class="d-block w-100" alt="Portada inicio 1, productos de Entrelazadas Mágicas">
             </div>
             <div class="carousel-item">
-              <img src="./images/portada-inicio-dos.jpg" class="d-block w-100 carrouser" alt="Portada inicio 2, productos de Entrelazadas Mágicas">
+              <img src="./images/portadas/portada-inicio-dos.jpg" class="d-block w-100 carrouser" alt="Portada inicio 2, productos de Entrelazadas Mágicas">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -99,19 +99,19 @@
        <div class="pagina-inicio">
          <div class="productos">
           <div class="inicio-img">
-              <a href="./tienda.html#id-amigurumis"><img src="./images/amigurumi.png" alt="Imagen de un amigurumi" class="tipos"></a>
+              <a href="./tienda.html#id-amigurumis"><img src="./images/productos/amigurumi.png" alt="Imagen de un amigurumi" class="tipos"></a>
               <a href="./tienda.html#id-amigurumis" class="links">AMIGURUMIS</a>
           </div>
           <div class="inicio-img">
-              <a href="./tienda.html#id-sweaters"><img src="./images/sweater.png" alt="Imagen de un sweater" class="tipos"></a>
+              <a href="./tienda.html#id-sweaters"><img src="./images/productos/sweater.png" alt="Imagen de un sweater" class="tipos"></a>
               <a href="./tienda.html#id-sweaters" class="links">SWEATERS</a>
           </div>
           <div class="inicio-img">
-              <a href="./tienda.html#id-accesorios"><img src="./images/accesorios.png" alt="Imagen de un sweater para gatos" class="tipos"></a>
+              <a href="./tienda.html#id-accesorios"><img src="./images/productos/accesorios.png" alt="Imagen de un sweater para gatos" class="tipos"></a>
               <a href="./tienda.html#id-accesorios" class="links">ACCESORIOS</a>
           </div>
           <div class="inicio-img">
-              <a href="./cursos.html"><img src="./images/cursos.png" alt="Imagen de una persona haciendo un curso" class="tipos"></a>
+              <a href="./cursos.html"><img src="./images/productos/cursos.png" alt="Imagen de una persona haciendo un curso" class="tipos"></a>
               <a href="./cursos.html" class="links">CURSOS</a>
           </div>
          </div>
@@ -124,7 +124,7 @@
       <footer class="container-footer">
 
         <div>
-          <a href="./index.html"><img class="logo-footer" src="logo.png" alt="Logo de Entrelazadas Mágicas"></a>
+          <a href="./index.html"><img class="logo-footer" src="./images/logo.png" alt="Logo de Entrelazadas Mágicas"></a>
 
         </div>
 
