--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
     <!--CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./estilos/style.css">
 
 
     <!--Fonts-->
@@ -49,16 +49,16 @@
                 <a class="nav-link" href="#">INICIO</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="./tienda.html">TIENDA</a>
+                <a class="nav-link" href="./pages/tienda.html">TIENDA</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="./cursos.html">CURSOS</a>
+                <a class="nav-link" href="./pages/cursos.html">CURSOS</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="./ubicación.html">UBICACIÓN</a>
+                <a class="nav-link" href="./pages/ubicación.html">UBICACIÓN</a>
               </li>
             </ul>
 
@@ -99,20 +99,20 @@
        <div class="pagina-inicio">
          <div class="productos">
           <div class="inicio-img">
-              <a href="./tienda.html#id-amigurumis"><img src="./images/productos/amigurumi.png" alt="Imagen de un amigurumi" class="tipos"></a>
-              <a href="./tienda.html#id-amigurumis" class="links">AMIGURUMIS</a>
+              <a href="./pages/tienda.html#id-amigurumis"><img src="./images/productos/amigurumi.png" alt="Imagen de un amigurumi" class="tipos"></a>
+              <a href="./pages/tienda.html#id-amigurumis" class="links">AMIGURUMIS</a>
           </div>
           <div class="inicio-img">
-              <a href="./tienda.html#id-sweaters"><img src="./images/productos/sweater.png" alt="Imagen de un sweater" class="tipos"></a>
-              <a href="./tienda.html#id-sweaters" class="links">SWEATERS</a>
+              <a href="./pages/tienda.html#id-sweaters"><img src="./images/productos/sweater.png" alt="Imagen de un sweater" class="tipos"></a>
+              <a href="./pages/tienda.html#id-sweaters" class="links">SWEATERS</a>
           </div>
           <div class="inicio-img">
-              <a href="./tienda.html#id-accesorios"><img src="./images/productos/accesorios.png" alt="Imagen de un sweater para gatos" class="tipos"></a>
-              <a href="./tienda.html#id-accesorios" class="links">ACCESORIOS</a>
+              <a href="./pages/tienda.html#id-accesorios"><img src="./images/productos/accesorios.png" alt="Imagen de un sweater para gatos" class="tipos"></a>
+              <a href="./pages/tienda.html#id-accesorios" class="links">ACCESORIOS</a>
           </div>
           <div class="inicio-img">
-              <a href="./cursos.html"><img src="./images/productos/cursos.png" alt="Imagen de una persona haciendo un curso" class="tipos"></a>
-              <a href="./cursos.html" class="links">CURSOS</a>
+              <a href="./pages/cursos.html"><img src="./images/productos/cursos.png" alt="Imagen de una persona haciendo un curso" class="tipos"></a>
+              <a href="./pages/cursos.html" class="links">CURSOS</a>
           </div>
          </div>
        </div>
@@ -125,7 +125,6 @@
 
         <div>
           <a href="./index.html"><img class="logo-footer" src="./images/logo.png" alt="Logo de Entrelazadas Mágicas"></a>
-
         </div>
 
         <div>
@@ -134,16 +133,16 @@
                 <a class="menu-footer" href="#">INICIO</a>
             </li>
             <li class="footer-li">
-                <a class="menu-footer" href="./tienda.html">TIENDA</a>
+                <a class="menu-footer" href="./pages/tienda.html">TIENDA</a>
             </li>
             <li class="footer-li">
-                <a class="menu-footer" href="./cursos.html">CURSOS</a>
+                <a class="menu-footer" href="./pages/cursos.html">CURSOS</a>
             </li>
             <li class="footer-li">
-              <a class="menu-footer" href="./contacto.html">CONTACTO</a>
+              <a class="menu-footer" href="./pages/contacto.html">CONTACTO</a>
             </li>
             <li class="footer-li">
-              <a class="menu-footer" href="./ubicación.html">UBICACIÓN</a>
+              <a class="menu-footer" href="./pages/ubicación.html">UBICACIÓN</a>
             </li>
            </ul>
 
