--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Entrelazadas Mágicas</title>
 
 
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+
     <!--CSS-->
-    <link rel="stylesheet" href="./estilos/style.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 
 
     <!--Fonts-->
@@ -19,11 +23,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
-
-    <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-
+    
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/8933b60acf.js" crossorigin="anonymous"></script>
 
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="./pages/ubicación.html">UBICACIÓN</a>
+                <a class="nav-link" href="./pages/ubicacion.html">UBICACIÓN</a>
               </li>
             </ul>
 
@@ -93,24 +93,24 @@
   
         <!--Tipos de productos-->
         <div>
-          <h3 class="font">NUESTROS PRODUCTOS</h3>
+          <h1>NUESTROS PRODUCTOS</h1>
         </div>
   
        <div class="pagina-inicio">
          <div class="productos">
-          <div class="inicio-img">
+          <div>
               <a href="./pages/tienda.html#id-amigurumis"><img src="./images/productos/amigurumi.png" alt="Imagen de un amigurumi" class="tipos"></a>
               <a href="./pages/tienda.html#id-amigurumis" class="links">AMIGURUMIS</a>
           </div>
-          <div class="inicio-img">
+          <div>
               <a href="./pages/tienda.html#id-sweaters"><img src="./images/productos/sweater.png" alt="Imagen de un sweater" class="tipos"></a>
               <a href="./pages/tienda.html#id-sweaters" class="links">SWEATERS</a>
           </div>
-          <div class="inicio-img">
+          <div>
               <a href="./pages/tienda.html#id-accesorios"><img src="./images/productos/accesorios.png" alt="Imagen de un sweater para gatos" class="tipos"></a>
               <a href="./pages/tienda.html#id-accesorios" class="links">ACCESORIOS</a>
           </div>
-          <div class="inicio-img">
+          <div>
               <a href="./pages/cursos.html"><img src="./images/productos/cursos.png" alt="Imagen de una persona haciendo un curso" class="tipos"></a>
               <a href="./pages/cursos.html" class="links">CURSOS</a>
           </div>
@@ -121,28 +121,28 @@
 
       
       <!--Footer-->
-      <footer class="container-footer">
+      <footer class="footer-container">
 
         <div>
           <a href="./index.html"><img class="logo-footer" src="./images/logo.png" alt="Logo de Entrelazadas Mágicas"></a>
         </div>
 
         <div>
-          <ul class="footer-ul">
-            <li class="footer-li">
+          <ul>
+            <li>
                 <a class="menu-footer" href="#">INICIO</a>
             </li>
-            <li class="footer-li">
+            <li>
                 <a class="menu-footer" href="./pages/tienda.html">TIENDA</a>
             </li>
-            <li class="footer-li">
+            <li>
                 <a class="menu-footer" href="./pages/cursos.html">CURSOS</a>
             </li>
-            <li class="footer-li">
+            <li>
               <a class="menu-footer" href="./pages/contacto.html">CONTACTO</a>
             </li>
-            <li class="footer-li">
-              <a class="menu-footer" href="./pages/ubicación.html">UBICACIÓN</a>
+            <li>
+              <a class="menu-footer" href="./pages/ubicacion.html">UBICACIÓN</a>
             </li>
            </ul>
 
@@ -163,4 +163,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
+
 </html>
