--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -6,8 +6,12 @@
     <title>Entrelazadas Mágicas</title>
 
 
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+
     <!--CSS-->
-    <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
 
     <!--Fonts-->
@@ -18,10 +22,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-
-
-    <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
     <!--Font Awesome-->
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="./contacto.html">CONTACTO</a>
               </li>
               <li class="nav-item item-space">
-                <a class="nav-link" href="./ubicación.html">UBICACIÓN</a>
+                <a class="nav-link" href="./ubicacion.html">UBICACIÓN</a>
               </li>
             </ul>
 
@@ -77,7 +77,7 @@
         <div class="grid-container">
 
           <div class="cursos">
-            <h3>NUESTROS CURSOS Y TUTORIALES</h3>
+            <h1 class="cursos">NUESTROS CURSOS Y TUTORIALES</h1>
           </div>
   
           <div class="curso-uno">
@@ -102,11 +102,10 @@
 
 
       <!--Footer-->
-      <footer class="container-footer">
+      <footer class="footer-container">
 
         <div>
           <a href="../index.html"><img class="logo-footer" src="../images/logo.png" alt="Logo de Entrelazadas Mágicas"></a>
-
         </div>
 
 
@@ -125,7 +124,7 @@
               <a class="menu-footer" href="./contacto.html">CONTACTO</a>
             </li>
             <li class="footer-li">
-              <a class="menu-footer" href="./ubicación.html">UBICACIÓN</a>
+              <a class="menu-footer" href="./ubicacion.html">UBICACIÓN</a>
             </li>
            </ul>
 
