--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid nav-style">
 
-          <a class="navbar-brand" href="#"><img class="logo" src="./images/logo.png" alt="Logo de Entrelazadas Mágicas"></a>
+          <a class="navbar-brand" href="#"><img class="header-logo" src="./images/logo.png" alt="Logo de Entrelazadas Mágicas"></a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -92,30 +92,37 @@
         </div>
   
         <!--Tipos de productos-->
-        <div>
+        <div class="productos-titulo">
           <h1>NUESTROS PRODUCTOS</h1>
         </div>
   
-       <div class="pagina-inicio">
-         <div class="productos">
-          <div>
-              <a href="./pages/tienda.html#id-amigurumis"><img src="./images/productos/amigurumi.png" alt="Imagen de un amigurumi" class="tipos"></a>
-              <a href="./pages/tienda.html#id-amigurumis" class="links">AMIGURUMIS</a>
+        <div class="pagina-inicio">
+        
+          <div class="productos">
+
+           <div class="productos-img">
+             <a href="./pages/tienda.html#id-amigurumis"><img src="./images/productos/amigurumi.png" alt="Imagen de un amigurumi" class="tipos"></a>
+             <a href="./pages/tienda.html#id-amigurumis" class="links">AMIGURUMIS</a>
+           </div>
+
+           <div class="productos-img">
+             <a href="./pages/tienda.html#id-sweaters"><img src="./images/productos/sweater.png" alt="Imagen de un sweater" class="tipos"></a>
+             <a href="./pages/tienda.html#id-sweaters" class="links">SWEATERS</a>
+           </div>
+
+           <div class="productos-img">
+             <a href="./pages/tienda.html#id-accesorios"><img src="./images/productos/accesorios.png" alt="Imagen de un sweater para gatos" class="tipos"></a>
+             <a href="./pages/tienda.html#id-accesorios" class="links">ACCESORIOS</a>
+           </div>
+
+           <div class="productos-img">
+             <a href="./pages/cursos.html"><img src="./images/productos/cursos.png" alt="Imagen de una persona haciendo un curso" class="tipos"></a>
+             <a href="./pages/cursos.html" class="links">CURSOS</a>
+           </div>
+
           </div>
-          <div>
-              <a href="./pages/tienda.html#id-sweaters"><img src="./images/productos/sweater.png" alt="Imagen de un sweater" class="tipos"></a>
-              <a href="./pages/tienda.html#id-sweaters" class="links">SWEATERS</a>
-          </div>
-          <div>
-              <a href="./pages/tienda.html#id-accesorios"><img src="./images/productos/accesorios.png" alt="Imagen de un sweater para gatos" class="tipos"></a>
-              <a href="./pages/tienda.html#id-accesorios" class="links">ACCESORIOS</a>
-          </div>
-          <div>
-              <a href="./pages/cursos.html"><img src="./images/productos/cursos.png" alt="Imagen de una persona haciendo un curso" class="tipos"></a>
-              <a href="./pages/cursos.html" class="links">CURSOS</a>
-          </div>
-         </div>
-       </div>
+
+        </div>
 
       </main>
 
