Página Contacto responsive

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -73,7 +73,7 @@
         <div>
 
           <div class="tienda-bienvenidos">
-            <h1>BIENVENIDOS A NUESTRA TIENDA</h1>
+            <h1 class="tienda-h1">BIENVENIDOS A NUESTRA TIENDA</h1>
           </div>
   
           <div id="id-amigurumis">
