--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="./images/shortcut-icon.png" type="image/x-icon">
     <title>Entrelazadas Mágicas</title>
 
 
@@ -101,22 +102,22 @@
           <div class="productos">
 
            <div class="productos-img">
-             <a href="./pages/tienda.html#id-amigurumis"><img src="./images/productos/amigurumi.png" alt="Imagen de un amigurumi" class="tipos"></a>
+             <a href="./pages/tienda.html#id-amigurumis"><img src="./images/productos/prod-amigurumi.jpg" alt="Imagen de un amigurumi" class="tipos"></a>
              <a href="./pages/tienda.html#id-amigurumis" class="links">AMIGURUMIS</a>
            </div>
 
            <div class="productos-img">
-             <a href="./pages/tienda.html#id-sweaters"><img src="./images/productos/sweater.png" alt="Imagen de un sweater" class="tipos"></a>
+             <a href="./pages/tienda.html#id-sweaters"><img src="./images/productos/prod-sweater.jpg" alt="Imagen de un sweater" class="tipos"></a>
              <a href="./pages/tienda.html#id-sweaters" class="links">SWEATERS</a>
            </div>
 
            <div class="productos-img">
-             <a href="./pages/tienda.html#id-accesorios"><img src="./images/productos/accesorios.png" alt="Imagen de un sweater para gatos" class="tipos"></a>
+             <a href="./pages/tienda.html#id-accesorios"><img src="./images/productos/prod-accesorios.jpg" alt="Imagen de un sweater para gatos" class="tipos"></a>
              <a href="./pages/tienda.html#id-accesorios" class="links">ACCESORIOS</a>
            </div>
 
            <div class="productos-img">
-             <a href="./pages/cursos.html"><img src="./images/productos/cursos.png" alt="Imagen de una persona haciendo un curso" class="tipos"></a>
+             <a href="./pages/cursos.html"><img src="./images/productos/prod-cursos.jpg" alt="Imagen de una persona haciendo un curso" class="tipos"></a>
              <a href="./pages/cursos.html" class="links">CURSOS</a>
            </div>
 
