--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="../images/shortcut-icon.png" type="image/x-icon">
     <title>Entrelazadas Mágicas</title>
 
 
@@ -71,7 +72,7 @@
       <main>
 
         <div>
-          <img src="../images/portadas/portada-cursos.png" alt="Portada cursos, persona tejiendo" class="cursos-portada">
+          <img src="../images/portadas/portada-curso.jpg" alt="Portada cursos, persona tejiendo" class="cursos-portada">
         </div>
   
         <div class="grid-container">
