--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Entrelazadas Mágicas es un emprendimiento de tejido. Ofrecemos una amplia cantidad de productos: sweaters, amigurumis, accesorios y cursos gratuitos. Todos nuestros productos pueden ser personalizados.">
+    <meta name="keywords" content="ENTRELAZADAS MÁGICAS, SWEATERS, PULLOVERS, LLAVEROS, TEJIDOS, CROCHET, AMIGURUMIS, CURSOS DE TEJIDO, TEJIDO">
     <link rel="shortcut icon" href="./images/shortcut-icon.png" type="image/x-icon">
     <title>Entrelazadas Mágicas</title>
+
 
 
     <!--Bootstrap-->
@@ -83,7 +86,7 @@
               <img src="./images/portadas/portada-inicio.jpg" class="d-block w-100" alt="Portada inicio 1, productos de Entrelazadas Mágicas">
             </div>
             <div class="carousel-item">
-              <img src="./images/portadas/portada-inicio-dos.jpg" class="d-block w-100 carrouser" alt="Portada inicio 2, productos de Entrelazadas Mágicas">
+              <img src="./images/portadas/portada-inicio-dos.jpg" class="d-block w-100 carrouser" alt="Portada inicio 2, amigurumi de Baby Yoda">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
