--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="En nuestra página Ubicación podrás encontrar la dirección de nuestro local.">
+    <meta name="keywords" content="ENTRELAZADAS MÁGICAS, SWEATERS, PULLOVERS, LLAVEROS, TEJIDOS, CROCHET, AMIGURUMIS, CURSOS DE TEJIDO, TEJIDO, UNICENTER, UNICENTER SHOPPING">
     <link rel="shortcut icon" href="../images/shortcut-icon.png" type="image/x-icon">
     <title>UBICACIÓN | Entrelazadas Mágicas</title>
 
