--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Bienvenidos a la página Contacto de Entrelazadas Mágicas, aquí podrás encontrar nuestras redes sociales para poder comunicarte con nosotros y realizar tus pedidos personalizados.">
+    <meta name="keywords" content="ENTRELAZADAS MÁGICAS, SWEATERS, PULLOVERS, LLAVEROS, TEJIDOS, CROCHET, AMIGURUMIS, CURSOS DE TEJIDO, TEJIDO">
     <link rel="shortcut icon" href="../images/shortcut-icon.png" type="image/x-icon">
     <title>CONTACTO | Entrelazadas Mágicas</title>
 
