--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Bienvenidos a nuestro espacio de cursos virtuales. Todos nuestros cursos y tutoriales son gratuitos y pueden ser vistos por YouTube.">
+    <meta name="keywords" content="ENTRELAZADAS MÁGICAS, SWEATERS, PULLOVERS, LLAVEROS, TEJIDOS, CROCHET, AMIGURUMIS, CURSOS DE TEJIDO, TEJIDO, CURSOS DE TEJIDO GRATUITOS, BABY YODA, STAR WARS">
     <link rel="shortcut icon" href="../images/shortcut-icon.png" type="image/x-icon">
     <title>CURSOS | Entrelazadas Mágicas</title>
 
