--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Bienvenidos a la Tienda de Entrelazadas Mágicas, aquí podrás encontrar todos nuestros productos.">
+    <meta name="keywords" content="ENTRELAZADAS MÁGICAS, SWEATERS, PULLOVERS, LLAVEROS, TEJIDOS, CROCHET, AMIGURUMIS, CURSOS DE TEJIDO, TEJIDO, BABY YODA, STAR WARS">
     <link rel="shortcut icon" href="../images/shortcut-icon.png" type="image/x-icon">
     <title>TIENDA | Entrelazadas Mágicas</title>
 
